tests/negative/slice_var_oob_index_assign.far
fun main() -> i64 {
  a = [1, 2, 3, 4, 5]
  sl = a.slice(1, 4)
  sl[3] = 99
  return 0
}
